--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,8 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
     "git-commit-msg-linter": "^4.1.3",
+    "husky": "^8.0.1",
+    "lint-staged": "^13.0.3",
     "nodemon": "^2.0.19"
   },
   "dependencies": {
