--- a/backend/package.json
+++ b/backend/package.json
@@ -34,6 +34,7 @@
     "nodemon": "^2.0.19"
   },
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "uuid": "^8.3.2"
   }
 }
