--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -34,6 +34,12 @@
     "react/jsx-no-bind": "off",
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
-    "class-methods-use-this": "off"
+    "class-methods-use-this": "off",
+    "no-empty": [
+      "error",
+      {
+        "allowEmptyCatch": true
+      }
+    ]
   }
 }
